--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <script src="js/app.js"> </script>
     <footer>
         <p>
-            &copy; abdulmajjed
+            &copy; Abdulmajjed 
         </p>
     </footer>
 </body>
